# IRIS_SST_align

./: .gitignore  README.md  align_iris_sst.py  alignment_common.py  download_hmi_reference.py  interactive_iris_hmi_align.py  interactive_sst_manual_align.py  plot_iris_direct.py  plot_sst_iris_time_overlap.py  plot_vs_hmi.py  pyproject.toml  run_full_pipeline.sh  run_pipeline.py  sunpy_alignment_check.py  update_sst_nb_wcs.py
